Bug 478876 - "Clear History" doesn't clear the ResourceInfo table in the kactivitymanagerd database
Summary: "Clear History" doesn't clear the ResourceInfo table in the kactivitymanagerd...
Status: RESOLVED FIXED
Alias: None
Product: kactivitymanagerd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.91.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-22 11:10 UTC by Jin Liu
Modified: 2023-12-22 11:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2023-12-22 11:10:27 UTC
STEPS TO REPRODUCE
1. systemsettings - recent files - clear history - all
2. `sqlitebrowser ~/.local/share/kactivitymanagerd/resources/database`
3. Browse the ResourceInfo table

OBSERVED RESULT
Table full of records.

EXPECTED RESULT
Empty table.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.91.0
KDE Frameworks Version: 5.247.0
Qt Version: 6.7.0
Kernel Version: 6.6.7-arch1-1 (64-bit)
Graphics Platform: offscreen
Processors: 12 × AMD Ryzen 5 5600H with Radeon Graphics
Memory: 13.5 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Comment 1 Méven 2023-12-22 11:51:32 UTC
Git commit 80ee42ffbc64b7e0ff025bf5ee036e44f1358f26 by Méven Car.
Committed on 22/12/2023 at 12:46.
Pushed by meven into branch 'master'.

StatsPlugin: Also clear corresponding ResourceInfo

when cleaning resources.

M  +41   -0    src/service/plugins/sqlite/StatsPlugin.cpp

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/80ee42ffbc64b7e0ff025bf5ee036e44f1358f26