StatsPlugin: Also clear corresponding ResourceInfo

when cleaning resources.

BUG: 478876